tests/valid/valid_subset_object.csl
config SubsetObj {
  available: { id: string; name: string; }[];
  selected: { id: string; name: string; }[];
  constraints {
    validate subset(selected, available, [id]);
  };
}
