tests/invalid/invalid_annotation_numeric_on_string.csl
config InvalidAnn1 {
  name: string @min(10);
}
